Added flickr fetching

--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
         </div>
         <div>
           <h3 id="photography">Photography</h3>
+          <div id="gallery" class="grid-x grid-margin-x">
+          </div>
+          More up on my <a href="https://flickr.com/johncarl81"><i class="fab fa-flickr"></i>Flickr</a> and <a chref="https://www.instagram.com/johncarl81/"><i class="fab fa-instagram" ></i>Instagram</a> accounts
         </div>
-
         <hr/>
         <div>
           <h3 id="projects">Projects</h3>
