Cleaned up html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="grid-container">
 
       <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
+        <div class="cell">
           <h1>Hi there, I'm John.</h1>
           <h5>
             <p>
@@ -29,22 +29,18 @@
             </p>
           </h5>
         </div>
-      </div>
-      <div>
-        <a class="fab fa-facebook fa-2x" href="https://www.facebook.com/johncarl81"></a>
-        <a class="fab fa-github fa-2x" href="https://github.com/johncarl81"></a>
-        <a class="fab fa-instagram fa-2x" href="https://www.instagram.com/johncarl81/"></a>
-        <a class="fab fa-flickr fa-2x" href="https://flickr.com/johncarl81"></a>
-        <a class="fab fa-linkedin fa-2x" href="https://www.linkedin.com/in/john-ericksen-19766620/"></a>
-        <a class="fab fa-twitter fa-2x" href="https://twitter.com/johncarl81"></a>
-        <a class="fab fa-google-plus fa-2x" href="http://google.com/+JohnEricksen"></a>
-        <a class="fab fa-youtube fa-2x" href="http://youtube.com/c/JohnEricksen"></a>
-      </div>
-    </div>
-    <hr/>
-    <div class="grid-container">
-      <div class="large-8 columns">
-        <div>
+        <div class="cell">
+          <a class="fab fa-facebook fa-2x" href="https://www.facebook.com/johncarl81"></a>
+          <a class="fab fa-github fa-2x" href="https://github.com/johncarl81"></a>
+          <a class="fab fa-instagram fa-2x" href="https://www.instagram.com/johncarl81/"></a>
+          <a class="fab fa-flickr fa-2x" href="https://flickr.com/johncarl81"></a>
+          <a class="fab fa-linkedin fa-2x" href="https://www.linkedin.com/in/john-ericksen-19766620/"></a>
+          <a class="fab fa-twitter fa-2x" href="https://twitter.com/johncarl81"></a>
+          <a class="fab fa-google-plus fa-2x" href="http://google.com/+JohnEricksen"></a>
+          <a class="fab fa-youtube fa-2x" href="http://youtube.com/c/JohnEricksen"></a>
+          <hr/>
+        </div>
+        <div class="cell">
           <h3 id="research">Research</h3>
           <div>
             <h4><a href="https://ieeexplore.ieee.org/abstract/document/8285399/">Automatically evolving a general controller for robot swarms</a></h4>
@@ -74,16 +70,15 @@
           </div>
           <hr/>
         </div>
-        <div>
-        </div>
-        <div>
+        <div class="cell">
           <h3 id="photography">Photography</h3>
           <div id="gallery" class="grid-x grid-margin-x">
           </div>
           More up on my <a href="https://flickr.com/johncarl81"><i class="fab fa-flickr"></i>Flickr</a> and <a chref="https://www.instagram.com/johncarl81/"><i class="fab fa-instagram" ></i>Instagram</a> accounts
+
+          <hr/>
         </div>
-        <hr/>
-        <div>
+        <div class="cell">
           <h3 id="projects">Projects</h3>
           <div>
             <h4><img src="images/package_emoji.png"> <a href="http://parceler.org/">Parceler</a></h4>
