Provided full name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <div class="grid-x grid-padding-x">
         <div class="cell">
-          <h1>Hi there, I'm John.</h1>
+          <h1>Hi there, I'm John Ericksen.</h1>
           <h5>
             <p>
               I'm a software developer at Honeywell and computer science Ph.D. student at the <a href="http://www.unm.edu/">University of New Mexico</a> with the <a href="https://moseslab.cs.unm.edu/">Moses Biological Computation Lab</a>.
