Added recent references

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   </head>
   <body>
     <div class="grid-container">
-
       <div class="grid-x grid-padding-x">
         <div class="cell">
           <h1>Hi there, I'm John Ericksen.</h1>
@@ -42,6 +41,53 @@
         </div>
         <div class="cell">
           <h3 id="research">Research</h3>
+
+          <div>
+            <h4><a href="https://link.springer.com/article/10.1007/s43154-020-00018-1">Swarm Foraging Review: Closing the Gap Between Proof and Practice</a></h4>
+            <i>Qi Lu, G. Matthew Fricke, John C. Ericksen, Melanie E. Moses</i>
+            <p>
+              In this review we highlight bio-inspired and self-organizing approaches to swarm foraging and contrast them with approaches that can provide theoretical proofs, but which abstract away important features from foraging in real-world environments.
+            </p>
+            <small>
+              MLA: Lu, Qi, et al. "Swarm Foraging Review: Closing the Gap Between Proof and Practice." Current Robotics Reports (2020): 1-11.
+            </small>
+          </div>
+          <hr/>
+
+          <div>
+            <h4><a href="https://arxiv.org/pdf/2009.00156.pdf">LOCUS: A multi-robot loss-tolerant algorithm for surveying volcanic plumes</a></h4>
+            <i>John Ericksen, Abhinav Aggarwal, G. Matthew Fricke, Melanie E. Moses</i>
+            <p>
+              Measurement of volcanic CO2 flux by a drone
+              swarm poses special challenges. Drones must be able to follow
+              gas concentration gradients while tolerating frequent drone loss.
+              We present the LoCUSalgorithm as a solution to this problem
+              and prove its robustness. LoCUS relies on swarm coordination
+              and self-healing to solve the task. As a point of contrast we also
+              implement the MoBSalgorithm, derived from previously published work, which allows drones to solve the task independently.
+              We compare the effectiveness of these algorithms using drone
+              simulations, and find that LoCUS provides a reliable and efficient
+              solution to the volcano survey problem. Further, the novel datastructures and algorithms underpinning LoCUS have application
+              in other areas of fault-tolerant algorithm research.
+            </p>
+            <small>
+              MLA: Ericksen, John, et al. "LOCUS: A multi-robot loss-tolerant algorithm for surveying volcanic plumes." 4th IEEE International Conference on Robotic Computing: IEEE. 2020.
+            </small>
+          </div>
+          <hr/>
+
+          <div>
+            <h4><a href="https://arxiv.org/abs/1911.11974">On the Minimal Set of Inputs Required for Efficient Neuro-Evolved Foraging</a></h4>
+            <i>John Ericksen, Abhinav Aggarwal, Melanie E. Moses</i>
+            <p>
+              In this paper, we perform an ablation study of neatfa, a neuro-evolved foraging algorithm that has recently been shown to forage efficiently under different resource distributions. Through selective disabling of input signals, we identify a \emph{sufficiently} minimal set of input features that contribute the most towards determining search trajectories which favor high resource collection rates. Our experiments reveal that, independent of how the resources are distributed in the arena, the signals involved in imparting the controller the ability to switch from searching of resources to transporting them back to the nest are the most critical. Additionally, we find that pheromones play a key role in boosting performance of the controller by providing signals for informed locomotion in search for unforaged resources.
+            </p>
+            <small>
+              MLA: Erickson, John, Abhinav Aggarwal, and Melanie E. Moses. "On the Minimal Set of Inputs Required for Efficient Neuro-Evolved Foraging." arXiv preprint arXiv:1911.11974 (2019).
+            </small>
+          </div>
+          <hr/>
+
           <div>
             <h4><a href="https://ieeexplore.ieee.org/abstract/document/8285399/">Automatically evolving a general controller for robot swarms</a></h4>
             <i>John Ericksen, Melanie Moses, Stephanie Forrest</i>
