Added hero image and latest publication

--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
+    <div id="john_hero">
+    <div class="grid-container vertical-bottom">
+      <div class="grid-x grid-padding-x">
+        <div class="cell">
+          <h1>Hi there, I'm John Ericksen</h1>
+        </div>
+      </div>
+    </div>
+    </div>
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <div class="cell">
-          <h1>Hi there, I'm John Ericksen.</h1>
           <h5>
             <p>
-              I'm a software developer at Honeywell and computer science Ph.D. student at the <a href="http://www.unm.edu/">University of New Mexico</a> with the <a href="https://moseslab.cs.unm.edu/">Moses Biological Computation Lab</a>.
-              My current research is applying cutting edge concepts to flying robot swarms.
+              I'm a Software Engineer at Honeywell, the Director of Software at <a href="https://diveavelo.com">Avelo Labs</a>, and a Computer Science Ph.D. student at the <a href="http://www.unm.edu/">University of New Mexico</a> with the <a href="https://moseslab.cs.unm.edu/">Moses Biological Computation Lab</a>.
+              My research is applying cutting edge concepts to flying robot swarms to study volcanic plumes.
               I've also worked on a variety of <a href="#research">research</a> from software architecture, evolutionary complex systems, and intelligent swarm robotics.
             </p>
             <p>
@@ -35,12 +43,24 @@
           <a class="fab fa-flickr fa-2x" href="https://flickr.com/johncarl81"></a>
           <a class="fab fa-linkedin fa-2x" href="https://www.linkedin.com/in/john-ericksen-19766620/"></a>
           <a class="fab fa-twitter fa-2x" href="https://twitter.com/johncarl81"></a>
-          <a class="fab fa-google-plus fa-2x" href="http://google.com/+JohnEricksen"></a>
           <a class="fab fa-youtube fa-2x" href="http://youtube.com/c/JohnEricksen"></a>
           <hr/>
         </div>
         <div class="cell">
           <h3 id="research">Research</h3>
+
+          <div>
+            <h4><a href="https://www.frontiersin.org/articles/10.3389/fcteg.2022.836720/full">Aerial Survey Robotics in Extreme Environments: Mapping Volcanic CO2 Emissions With Flocking UAVs</a></h4>
+            <i>John Ericksen, G. Matthew Fricke, Scott Nowicki, Tobias P. Fischer, Julie C. Hayes, Karissa Rosenberger, Samantha R. Wolf, Rafael Fierro, and Melanie E. Moses</i>
+            <p>We present methods for autonomous collaborative surveying of volcanic CO2 emissions using aerial robots. CO2 is a useful predictor of volcanic eruptions and an influential greenhouse gas.
+              However, current CO2 mapping methods are hazardous and inefficient, as a result, only a small fraction of CO2 emitting volcanoes have been surveyed. We develop algorithms and a platform
+              to measure volcanic CO2 emissions. The Dragonfly Unpiloted Aerial Vehicle (UAV) platform is capable of long-duration CO2 collection flights in harsh environments. We implement two survey
+              algorithms on teams of Dragonfly robots and demonstrate that they effectively map gas emissions and locate the highest gas concentrations. Our experiments culminate in a successful field
+              test of collaborative rasterization and gradient descent algorithms in a challenging real-world environment at the edge of the Valles Caldera supervolcano. Both algorithms treat multiple
+              flocking UAVs as a distributed flexible instrument. Simultaneous sensing in multiple UAVs gives scientists greater confidence in estimates of gas concentrations and the locations of sources
+              of those emissions. These methods are also applicable to a range of other airborne concentration mapping tasks, such as pipeline leak detection and contaminant localization.</p>
+          </div>
+          <hr/>
 
           <div>
             <h4><a href="https://link.springer.com/article/10.1007/s43154-020-00018-1">Swarm Foraging Review: Closing the Gap Between Proof and Practice</a></h4>
